Implemented js page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+
+  <!-- required tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <title>Home of Michael</title>
+  
 </head>
 
 <body>
   <div class="viewbox">
-    <div class="viewbox-header">
-        <h1 class="viewbox-header-text">Please take a moment to enjoy this lovely shade of green.</h1>
-    </div>
+    <h1 class="viewbox-header-text">My name is Michael and this is my <a style="color: FireBrick" class="link" onclick="drawText(0)"><b>website</b></a>.</h1>
+	
+	<div>
+		<p id="hidden0">Would you like to see my <a style="color: IndianRed" href="resume-michaelbaumgarten.pdf" target="_blank"><b>resume</b></a>? Or would you like to <a style="color: DarkCyan" href="mailto:michaelbaumgarten@outlook.com"><b>contact</b></a> me?
+		<a style="color: OrangeRed" onclick="drawText(1)"><b>Something</b></a> else?</p>
+		
+		<p id="hidden1">How about a <a style="color: Chocolate" onclick="drawText(2)"><b>riddle</b></a>?</p>
+		
+		<p id="hidden2">
+			<b>Here goes:</b>
+			<i>Study this paragraph and all things it it. What is vitally wrong with it? Actually, nothing in it is wrong, but you must admit that it is most unusual. Don't just zip
+			   through it quickly, but study it scrupulously. With luck you should spot what is so particular about it and all words found in it. Can you say what it is? Tax your
+			   brains and try again. Don't miss a word or a symbol. It isn't all that difficult.</i>
+		</p>
+	</div>
   </div>
+ 
+   <script src="js/script.js"></script> 
 </body>
 </html>
+  
+
+  
+
